# 3sx

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build-deps.sh
.github/workflows/: build_psp.yml
cmake/: imgui_sources.cmake
docs/: building.md  config.md
src/: args.c  args.h  main.c  main.h  structs.h  types.h  xrd_common.h
src/arcade/: arcade_balance.c  arcade_char_data.c  arcade_char_data.h  rom_load.c  rom_load.h
src/core/: app.c  input.c  input.h  render_primitives.h  renderer.c  renderer.h
src/imgui/: imgui_wrapper.c  imgui_wrapper.h
src/imgui/dcimgui/: dcimgui_impl_sdlgpu3.cpp  dcimgui_impl_sdlgpu3.h
src/platform/app/psp/: psp_app.c  psp_app.h
src/platform/app/sdl/: sdl_app.c
src/platform/input/sdl/: sdl_pad.c  sdl_pad.h
src/platform/input/statcheck/: statcheck_input.c  statcheck_input.h
src/platform/netplay/: fistbump.c  fistbump.h  game_state.c  game_state.h  netplay.c  netplay.h  sdl_net_adapter.c  sdl_net_adapter.h
src/platform/video/: README
src/platform/video/opengl/: opengl_renderer.c  opengl_renderer.h
src/platform/video/opengl/glad/: glad.c  glad.h
src/platform/video/opengl/shaders/: frag_direct.glsl  frag_palette_4.glsl  frag_palette_8.glsl  frag_solid.glsl  vert.glsl
src/platform/video/psp/: psp_renderer.c  psp_renderer.h
src/platform/video/sdl_generic/: sdl_generic_renderer.c  sdl_generic_renderer.h  sdl_render_backend.h
src/platform/video/sdl_gpu/: sdl_gpu_renderer.c  sdl_gpu_renderer.h
src/platform/video/sdl_gpu/shaders/: README.md  direct.frag.hlsl  palette4.frag.hlsl  palette8.frag.hlsl  screen.frag.hlsl  solid.frag.hlsl  vert.hlsl
src/platform/video/sdl_gpu/shaders/compiled/msl/: direct.frag  palette4.frag  palette8.frag  screen.frag  solid.frag  vert
src/platform/video/sdl_gpu/shaders/compiled/spirv/: direct.frag  palette4.frag  palette8.frag  screen.frag  solid.frag  vert
src/port/: resources.c  resources.h  utils.c
src/port/config/: config.c
src/port/io/: afs.c  afs.h
src/port/sdk/: sdk_libpad2.c
src/port/sdl/: netplay_screen.c  netplay_screen.h  netstats_renderer.c  netstats_renderer.h
src/port/sound/: adx.c
src/sf33rd/AcrSDK/ps2/: flps2etc.c  flps2render.c  flps2vram.c  foundaps2.c  foundaps2.h
src/sf33rd/Source/Common/: PPGFile.c
src/sf33rd/Source/Game/: game.c  init3rd.c
src/sf33rd/Source/Game/demo/: demo00.c
src/sf33rd/Source/Game/effect/: eff40.c  effa4.c  effa4.h  effxx.c
src/sf33rd/Source/Game/ending/: end_20.c
src/sf33rd/Source/Game/engine/: charset.c  cmd_main.c  cmd_main.h  hitcheck.c  hitcheck.h  plcnt.c  plmain.c  plpat11.c  plpdm.c  plpnm.c  pls00.c  pls01.c  pls01.h  pls02.c  pls02.h  pls03.c  pls03.h  stun.c  vital.c
src/sf33rd/Source/Game/io/: gd3rd.c  gd3rd.h
src/sf33rd/Source/Game/menu/: menu.c  menu.h  netplay_menu.c  netplay_menu.h
src/sf33rd/Source/Game/rendering/: color3rd.c  color3rd.h  dc_ghost.c  dc_ghost.h  mtrans.c  texgroup.c
src/sf33rd/Source/Game/stage/: bg.c
src/sf33rd/Source/Game/system/: sys_sub.c  sysdir.c  sysdir.h
src/sf33rd/Source/Game/ui/: count.c  count.h  sc_sub.c  sc_sub.h
src/sf33rd/Source/PS2/mc/: knjsub.c  mcsub.c  savesub.c
src/test/: replay_game.c  replay_game.h  test_runner.c  test_runner.h  test_runner_compare.c  test_runner_compare.h  test_runner_utils.c  test_runner_utils.h
src/utils/: sha256.c
tools/: build-shadercross.sh  transpile-shaders.sh
tools/psp/: Dockerfile  README.md  build-port.sh  build-sdl.sh
